Setting wildfly36x for cargo-maven3-plugin